--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,114 +2,33 @@
     --background-color: #f6f8fa;
     --card-color: white;
     --card-border-color: #e1e4e8;
-    --black-color: #111
 }
 
-html{
-    background-color: var(--background-color);
+.element-container {
+    margin-top: 10%;
+    margin: 5% 11%; 
+    padding: 1.5rem;
+    max-height: 120px;
+    border: solid #dee2e6;
+    border-width: 1px;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
 }
 
-span {
-    margin: 10px 5px;
-    color: var(--black-color);
-    font-family: 'Helvetica Neue', sans-serif;
-    font-weight: bold;
-    letter-spacing: -1px;
-    line-height: 1;
-    font-size: 50px;
-    display: inline-block;
-    
-} 
-
-.hello_span {
-    text-align: center;
-    margin-bottom: 50px;
-    margin-top: 100px;
+.output {
+    height: 72px;
 }
 
-.LED-1, .LED-2 {
-    margin-bottom: 5%;
-    margin-right: 16%;
+.navbar {
+    background-color: var(--bs-primary);
+    height: 78px;
 }
 
-.option, .led-option {
-    transition-duration: 0.4s;
-    border-radius: 0px;
-    font-size: 40px;
-    text-align: center;
-    padding: 7px;
-    margin: 15px 20px;
-    align-items: center;
-    align-content: center;
-    border-style: solid;
-    height: 40px;
-    min-width: 260px;
-    max-width: 400px;
-    display: inline-block;
+a {
+    color: none;
 }
-
-.option {
-    border-color: rgb(255, 255, 255);
-    background-color: rgb(76, 76, 76);
-    color:rgb(255, 255, 255);
-}
-
-.led-option {
-    border-color:  #111;
-    border-radius: 20px;
-    display: inline-block;
-    background-color: rgb(255, 255, 255);
-    color: #111;
-}
-
-.led-option:hover{
-    color: #fff;
-    transition-duration: 0.4s;
-    background-color: #111;
-    border-color: rgb(255, 255, 255);
-    }
-
-.menu {
-    position: fixed;
-    width: 100%;
-    max-height: 90px;
-    left: 0;
-    top: 0;
-    margin-top: 0;
-    border-color: #111;
-    padding-left: 0px;
-    background-color: rgb(76, 76, 76);
-    justify-content: space-between;
-    display: inline-flex;
-}
-.time {
-    position: absolute;
-    width: auto;
-    height: auto;
-    top: 15px;
-    right: 100px;
-    background-color: var(--grey-color);
-    color: rgb(255, 255, 255);
-    font-size: 37px;
-    display: inline-block;
-}
-.menu_text, .option_text {
+.menu-label {
+    color: #dee2e6;
     text-decoration: none;
-    margin: 15px 15px;
-    font-family: 'Helvetica Neue', sans-serif;
-    font-weight: bold;
-    letter-spacing: -1px;
-    line-height: 1;   
-    color: rgb(250, 250, 250);
+    font-size:25px;
 }
-
-.option_text {
-    color: #111;
-}
-
-.option:hover{
-        transition-duration: 0.4s;
-        color: rgb(76, 76, 76);
-        background-color: rgb(255, 255, 255);
-        border-color:  rgb(255, 255, 255);
-    }
