--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type = "text/css" href="/static/css/style.css">
     <link href="./static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <script src="/static/js/script.js"></script>
-    <script src="/static/js/get_value.js" defer></script>
+    <script src="/static/js/load.js"></script>
+    <script src="/static/js/script.js" defer></script>
     <title>Element controller</title>
 </head>
 <body>    
