add output element

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,8 +34,8 @@ a {
     font-size:25px;
 }
 
-.name {
-    margin-right: 1.0em;
+.value {
+    margin-left: 1.0em;
 }
 .special-name, .bool-name {
     margin-right: 1.0em;
