--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Hello
-</body>
+<html>
+  <head>
+    <script type="text/javascript" src="/static/js/charts_script.js"></script>
+  </head>
+  <body class = {{name}}>
+    <center><div id="curve_chart" style="width: 900px; height: 500px"></div></center>
+    <script type="text/javascript" src="/static/js/chart.js"></script>
+  </body>
 </html>
